jobs4u.grammar/src/main/java/interviewModule/autogen/InterviewModelGrammarParser.java
package interviewModule.autogen;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class InterviewModelGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ANY_STRING=1, ARROW=2, DECIMAL=3, INTEGER=4, HASHTAG=5, PARAGRAPH=6, PERCENTAGE=7, 
		SPACE=8, QUESTIONS=9, DATE=10, DATE_ANSWER=11, DECIMAL_NUMBER=12, INTEGER_NUMBER=13, 
		MULTIPLE_CHOICE=14, NUMERIC_RANGE=15, NUMERIC_RANGE_ANSWER=16, SINGLE_CHOICE=17, 
		SHORT_ANSWER=18, TIME=19, TIME_ANSWER=20, TRUE_FALSE=21, TRUE_FALSE_ANWSER=22;
	public static final int
		RULE_start = 0, RULE_questions = 1, RULE_questionItem = 2, RULE_questionBody = 3, 
		RULE_questionType = 4, RULE_questionDate = 5, RULE_answerDate = 6, RULE_questionDecimalNumber = 7, 
		RULE_answerDecimal = 8, RULE_questionIntegerNumber = 9, RULE_answerInteger = 10, 
		RULE_questionMultipleChoice = 11, RULE_answerMultipleChoice = 12, RULE_questionNumericRange = 13, 
		RULE_answerNumericRange = 14, RULE_questionSingleChoice = 15, RULE_answerSingleChoice = 16, 
		RULE_questionShortAnswer = 17, RULE_answerShortText = 18, RULE_questionTime = 19, 
		RULE_answerTime = 20, RULE_questionTrueFalse = 21, RULE_answerTrueFalse = 22, 
		RULE_score = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "questions", "questionItem", "questionBody", "questionType", 
			"questionDate", "answerDate", "questionDecimalNumber", "answerDecimal", 
			"questionIntegerNumber", "answerInteger", "questionMultipleChoice", "answerMultipleChoice", 
			"questionNumericRange", "answerNumericRange", "questionSingleChoice", 
			"answerSingleChoice", "questionShortAnswer", "answerShortText", "questionTime", 
			"answerTime", "questionTrueFalse", "answerTrueFalse", "score"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'-> '", null, null, "'# '", null, null, "' '", "'Questions:'", 
			"'Date: '", null, "'Decimal Number: '", "'Integer Number: '", "'Multiple Choice: '", 
			"'Numeric Range: '", null, "'Single Choice: '", "'Short Answer: '", "'Time: '", 
			null, "'True/False: '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ANY_STRING", "ARROW", "DECIMAL", "INTEGER", "HASHTAG", "PARAGRAPH", 
			"PERCENTAGE", "SPACE", "QUESTIONS", "DATE", "DATE_ANSWER", "DECIMAL_NUMBER", 
			"INTEGER_NUMBER", "MULTIPLE_CHOICE", "NUMERIC_RANGE", "NUMERIC_RANGE_ANSWER", 
			"SINGLE_CHOICE", "SHORT_ANSWER", "TIME", "TIME_ANSWER", "TRUE_FALSE", 
			"TRUE_FALSE_ANWSER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "InterviewModelGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InterviewModelGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public QuestionsContext questions() {
			return getRuleContext(QuestionsContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			questions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionsContext extends ParserRuleContext {
		public TerminalNode HASHTAG() { return getToken(InterviewModelGrammarParser.HASHTAG, 0); }
		public TerminalNode QUESTIONS() { return getToken(InterviewModelGrammarParser.QUESTIONS, 0); }
		public TerminalNode PARAGRAPH() { return getToken(InterviewModelGrammarParser.PARAGRAPH, 0); }
		public List<QuestionItemContext> questionItem() {
			return getRuleContexts(QuestionItemContext.class);
		}
		public QuestionItemContext questionItem(int i) {
			return getRuleContext(QuestionItemContext.class,i);
		}
		public QuestionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionsContext questions() throws RecognitionException {
		QuestionsContext _localctx = new QuestionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_questions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(HASHTAG);
			setState(51);
			match(QUESTIONS);
			setState(52);
			match(PARAGRAPH);
			setState(54); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(53);
				questionItem();
				}
				}
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ARROW );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionItemContext extends ParserRuleContext {
		public TerminalNode ARROW() { return getToken(InterviewModelGrammarParser.ARROW, 0); }
		public QuestionTypeContext questionType() {
			return getRuleContext(QuestionTypeContext.class,0);
		}
		public QuestionItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestionItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestionItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestionItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionItemContext questionItem() throws RecognitionException {
		QuestionItemContext _localctx = new QuestionItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_questionItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(ARROW);
			setState(59);
			questionType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionBodyContext extends ParserRuleContext {
		public TerminalNode ANY_STRING() { return getToken(InterviewModelGrammarParser.ANY_STRING, 0); }
		public QuestionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionBodyContext questionBody() throws RecognitionException {
		QuestionBodyContext _localctx = new QuestionBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_questionBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(ANY_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionTypeContext extends ParserRuleContext {
		public QuestionDateContext questionDate() {
			return getRuleContext(QuestionDateContext.class,0);
		}
		public QuestionDecimalNumberContext questionDecimalNumber() {
			return getRuleContext(QuestionDecimalNumberContext.class,0);
		}
		public QuestionIntegerNumberContext questionIntegerNumber() {
			return getRuleContext(QuestionIntegerNumberContext.class,0);
		}
		public QuestionMultipleChoiceContext questionMultipleChoice() {
			return getRuleContext(QuestionMultipleChoiceContext.class,0);
		}
		public QuestionNumericRangeContext questionNumericRange() {
			return getRuleContext(QuestionNumericRangeContext.class,0);
		}
		public QuestionSingleChoiceContext questionSingleChoice() {
			return getRuleContext(QuestionSingleChoiceContext.class,0);
		}
		public QuestionShortAnswerContext questionShortAnswer() {
			return getRuleContext(QuestionShortAnswerContext.class,0);
		}
		public QuestionTimeContext questionTime() {
			return getRuleContext(QuestionTimeContext.class,0);
		}
		public QuestionTrueFalseContext questionTrueFalse() {
			return getRuleContext(QuestionTrueFalseContext.class,0);
		}
		public QuestionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestionType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestionType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestionType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionTypeContext questionType() throws RecognitionException {
		QuestionTypeContext _localctx = new QuestionTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_questionType);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				questionDate();
				}
				break;
			case DECIMAL_NUMBER:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				questionDecimalNumber();
				}
				break;
			case INTEGER_NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				questionIntegerNumber();
				}
				break;
			case MULTIPLE_CHOICE:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				questionMultipleChoice();
				}
				break;
			case NUMERIC_RANGE:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				questionNumericRange();
				}
				break;
			case SINGLE_CHOICE:
				enterOuterAlt(_localctx, 6);
				{
				setState(68);
				questionSingleChoice();
				}
				break;
			case SHORT_ANSWER:
				enterOuterAlt(_localctx, 7);
				{
				setState(69);
				questionShortAnswer();
				}
				break;
			case TIME:
				enterOuterAlt(_localctx, 8);
				{
				setState(70);
				questionTime();
				}
				break;
			case TRUE_FALSE:
				enterOuterAlt(_localctx, 9);
				{
				setState(71);
				questionTrueFalse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionDateContext extends ParserRuleContext {
		public TerminalNode DATE() { return getToken(InterviewModelGrammarParser.DATE, 0); }
		public QuestionBodyContext questionBody() {
			return getRuleContext(QuestionBodyContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(InterviewModelGrammarParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(InterviewModelGrammarParser.SPACE, i);
		}
		public AnswerDateContext answerDate() {
			return getRuleContext(AnswerDateContext.class,0);
		}
		public ScoreContext score() {
			return getRuleContext(ScoreContext.class,0);
		}
		public QuestionDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestionDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestionDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestionDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionDateContext questionDate() throws RecognitionException {
		QuestionDateContext _localctx = new QuestionDateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_questionDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(DATE);
			setState(75);
			questionBody();
			setState(76);
			match(SPACE);
			setState(77);
			answerDate();
			setState(78);
			match(SPACE);
			setState(79);
			score();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnswerDateContext extends ParserRuleContext {
		public TerminalNode DATE_ANSWER() { return getToken(InterviewModelGrammarParser.DATE_ANSWER, 0); }
		public AnswerDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterAnswerDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitAnswerDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitAnswerDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerDateContext answerDate() throws RecognitionException {
		AnswerDateContext _localctx = new AnswerDateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_answerDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(DATE_ANSWER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionDecimalNumberContext extends ParserRuleContext {
		public TerminalNode DECIMAL_NUMBER() { return getToken(InterviewModelGrammarParser.DECIMAL_NUMBER, 0); }
		public QuestionBodyContext questionBody() {
			return getRuleContext(QuestionBodyContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(InterviewModelGrammarParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(InterviewModelGrammarParser.SPACE, i);
		}
		public AnswerDecimalContext answerDecimal() {
			return getRuleContext(AnswerDecimalContext.class,0);
		}
		public ScoreContext score() {
			return getRuleContext(ScoreContext.class,0);
		}
		public QuestionDecimalNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionDecimalNumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestionDecimalNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestionDecimalNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestionDecimalNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionDecimalNumberContext questionDecimalNumber() throws RecognitionException {
		QuestionDecimalNumberContext _localctx = new QuestionDecimalNumberContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_questionDecimalNumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(DECIMAL_NUMBER);
			setState(84);
			questionBody();
			setState(85);
			match(SPACE);
			setState(86);
			answerDecimal();
			setState(87);
			match(SPACE);
			setState(88);
			score();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnswerDecimalContext extends ParserRuleContext {
		public TerminalNode DECIMAL() { return getToken(InterviewModelGrammarParser.DECIMAL, 0); }
		public AnswerDecimalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerDecimal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterAnswerDecimal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitAnswerDecimal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitAnswerDecimal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerDecimalContext answerDecimal() throws RecognitionException {
		AnswerDecimalContext _localctx = new AnswerDecimalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_answerDecimal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(DECIMAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionIntegerNumberContext extends ParserRuleContext {
		public TerminalNode INTEGER_NUMBER() { return getToken(InterviewModelGrammarParser.INTEGER_NUMBER, 0); }
		public QuestionBodyContext questionBody() {
			return getRuleContext(QuestionBodyContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(InterviewModelGrammarParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(InterviewModelGrammarParser.SPACE, i);
		}
		public AnswerIntegerContext answerInteger() {
			return getRuleContext(AnswerIntegerContext.class,0);
		}
		public ScoreContext score() {
			return getRuleContext(ScoreContext.class,0);
		}
		public QuestionIntegerNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionIntegerNumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestionIntegerNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestionIntegerNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestionIntegerNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionIntegerNumberContext questionIntegerNumber() throws RecognitionException {
		QuestionIntegerNumberContext _localctx = new QuestionIntegerNumberContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_questionIntegerNumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(INTEGER_NUMBER);
			setState(93);
			questionBody();
			setState(94);
			match(SPACE);
			setState(95);
			answerInteger();
			setState(96);
			match(SPACE);
			setState(97);
			score();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnswerIntegerContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(InterviewModelGrammarParser.INTEGER, 0); }
		public AnswerIntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerInteger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterAnswerInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitAnswerInteger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitAnswerInteger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerIntegerContext answerInteger() throws RecognitionException {
		AnswerIntegerContext _localctx = new AnswerIntegerContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_answerInteger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionMultipleChoiceContext extends ParserRuleContext {
		public TerminalNode MULTIPLE_CHOICE() { return getToken(InterviewModelGrammarParser.MULTIPLE_CHOICE, 0); }
		public QuestionBodyContext questionBody() {
			return getRuleContext(QuestionBodyContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(InterviewModelGrammarParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(InterviewModelGrammarParser.SPACE, i);
		}
		public AnswerMultipleChoiceContext answerMultipleChoice() {
			return getRuleContext(AnswerMultipleChoiceContext.class,0);
		}
		public ScoreContext score() {
			return getRuleContext(ScoreContext.class,0);
		}
		public QuestionMultipleChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionMultipleChoice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).enterQuestionMultipleChoice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelGrammarListener ) ((InterviewModelGrammarListener)listener).exitQuestionMultipleChoice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelGrammarVisitor ) return ((InterviewModelGrammarVisitor<? extends T>)visitor).visitQuestionMultipleChoice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionMultipleChoiceContext questionMultipleChoice() throws RecognitionException {
		QuestionMultipleChoiceContext _localctx = new QuestionMultipleChoiceContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_questionMultipleChoice);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(MULTIPLE_CHOICE);
			setState(102);
			questionBody();
			setState(103);
			match(SPACE);
			setState(104);
			answerMultipleChoice();
			setState(105);
			match(SPACE);
			setState(106);
			score();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
